+ Added a handler for the entire application to share and use for doing things on background, worker threads, or when accessing the UI thread to update it. + Added a StartImageGridViewActivity to test the ImageGridViewActivity....should be removed later for production release - Got the ImageGridViewActivity to display images from the internet when it is started by a proper starting intent - TODO: start the ImageSwipeViewActivity when a thumbnail of a cat is tapped - TODO: make the thumbnails displayed in this activity bigger..and possible other aesthetic things

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tobycatapps.c3717.cst.bcit.ca.android3717project1.ImageGridViewActivity" />
         </activity>
+        <activity
+            android:name=".StartImageGridViewActivity"
+            android:label="@string/title_activity_start_image_grid_view" >
+        </activity>
     </application>
 
 </manifest>
