--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('D:/Education/BCIT/2014-09-03 CST/Comp 3717 Android/Android3717Project1/volley/volley.jar')
 }
