--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="tobycatapps.c3717.cst.bcit.ca.android3717project1.AppController"
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MyActivity"
+            android:name=".activity.MyActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,20 +20,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ImageGridViewActivity"
+            android:name=".activity.ImageGridViewActivity"
             android:label="@string/title_activity_image_grid_view" >
         </activity>
         <activity
-            android:name=".ImageSwipeViewActivity"
+            android:name=".activity.ImageSwipeViewActivity"
             android:label="@string/title_activity_image_swipe_view"
-            android:parentActivityName=".ImageGridViewActivity" >
+            android:parentActivityName=".activity.ImageGridViewActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tobycatapps.c3717.cst.bcit.ca.android3717project1.ImageGridViewActivity" />
         </activity>
-       <activity
-            android:name=".StartImageGridViewActivity"
-            android:label="@string/title_activity_start_image_grid_view" >
+        <activity
+            android:name=".activity.SearchActivity"
+            android:label="@string/title_activity_search" >
         </activity>
     </application>
 
