--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
             android:name=".activity.AccountCreation"
             android:label="@string/title_activity_account_creation" >
         </activity>
+        <activity
+            android:name=".activity.UserImageGridViewActivity"
+            android:label="My Gallery" >
+        </activity>
     </application>
 
 </manifest>
