- integrated everything AccountCreationActivity with dbAccess

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:label="@string/title_activity_login" >
         </activity>
         <activity
-            android:name=".activity.AccountCreation"
+            android:name=".activity.AccountCreationActivity"
             android:label="@string/title_activity_account_creation" >
         </activity>
         <activity
